--- a/BinanceSync/BinanceSync.csproj
+++ b/BinanceSync/BinanceSync.csproj
@@ -9,6 +9,6 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\lib\STDLib\STDLib.csproj" />
+    <ProjectReference Include="..\lib\STDLib\STDLib.csproj" />
   </ItemGroup>
 </Project>
