--- a/ProfitManager/ProfitManager.csproj
+++ b/ProfitManager/ProfitManager.csproj
@@ -33,8 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CryptoExchange.Net, Version=3.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CryptoExchange.Net.3.3.0\lib\netstandard2.0\CryptoExchange.Net.dll</HintPath>
+    <Reference Include="Binance.Net, Version=6.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Binance.Net.6.5.0\lib\netstandard2.0\Binance.Net.dll</HintPath>
+    </Reference>
+    <Reference Include="CoinGecko, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CoinGeckoAsyncApi.1.3.5\lib\netstandard2.0\CoinGecko.dll</HintPath>
+    </Reference>
+    <Reference Include="CryptoExchange.Net, Version=3.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CryptoExchange.Net.3.4.0\lib\netstandard2.0\CryptoExchange.Net.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -129,6 +135,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Balance.cs" />
+    <Compile Include="BinanceData.cs" />
+    <Compile Include="BinanceAPI.cs" />
+    <Compile Include="Finance\Coin.cs" />
+    <Compile Include="Finance\Transaction.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -137,6 +148,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
+    <Compile Include="Trade.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -162,6 +175,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\lib\FRMLib\FRMLib.csproj">
+      <Project>{6062fc18-1c98-4f9a-be4c-44171cbcb55e}</Project>
+      <Name>FRMLib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\lib\STDLib\STDLib.csproj">
+      <Project>{c1e32e96-7bdb-4ecf-a948-7bbb4a5a4695}</Project>
+      <Name>STDLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
