--- a/ProfitManager/packages.config
+++ b/ProfitManager/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CryptoExchange.Net" version="3.3.0" targetFramework="net472" />
+  <package id="Binance.Net" version="6.5.0" targetFramework="net472" />
+  <package id="CoinGeckoAsyncApi" version="1.3.5" targetFramework="net472" />
+  <package id="CryptoExchange.Net" version="3.4.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net472" />
   <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net472" />
