--- a/ProfitManager/ProfitManager.csproj
+++ b/ProfitManager/ProfitManager.csproj
@@ -135,9 +135,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Balance.cs" />
+    <Compile Include="Finance\Balance.cs" />
     <Compile Include="BinanceData.cs" />
     <Compile Include="BinanceAPI.cs" />
+    <Compile Include="Finance\BalanceUpdate.cs" />
     <Compile Include="Finance\Coin.cs" />
     <Compile Include="Finance\Transaction.cs" />
     <Compile Include="Form1.cs">
@@ -149,7 +150,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="Trade.cs" />
+    <Compile Include="Finance\Trade.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
